need to create a profile page

--- a/ModelProject/Components/Layout/MainLayout.razor
+++ b/ModelProject/Components/Layout/MainLayout.razor
@@ -7,20 +7,20 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse" id="navbarNav">
+        <div class="navbar-collapse collapse bg-dark text-white" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">Home</NavLink>
+                    <NavLink class="nav-link text-white" href="/" Match="NavLinkMatch.All">Home</NavLink>
                 </li>
                
                 <li class="nav-item">
-                     <NavLink class="nav-link" href="/Upload" Match="NavLinkMatch.All">Upload</NavLink>
+                     <NavLink class="nav-link text-white" href="/Upload" Match="NavLinkMatch.All">Upload</NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/Profile" Match="NavLinkMatch.All">Profile</NavLink>
+                    <NavLink class="nav-link text-white" href="/Profile" Match="NavLinkMatch.All">Profile</NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="/Dashboard" Match="NavLinkMatch.All">Dashboard</NavLink>
+                    <NavLink class="nav-link text-white" href="/Dashboard" Match="NavLinkMatch.All">Dashboard</NavLink>
                 </li>
 
             </ul>
@@ -34,10 +34,10 @@
                     </Authorized>
                     <NotAuthorized>
                         <li class="nav-item">
-                            <NavLink class="nav-link" href="/Account/Login" Match="NavLinkMatch.Prefix">Login</NavLink>
+                            <NavLink class="nav-link text-white" href="/Account/Login" Match="NavLinkMatch.Prefix">Login</NavLink>
                         </li>
                         <li class="nav-item">
-                            <NavLink class="nav-link" href="/Account/Register" Match="NavLinkMatch.Prefix">Register</NavLink>
+                            <NavLink class="nav-link text-white" href="/Account/Register" Match="NavLinkMatch.Prefix">Register</NavLink>
                         </li>
                     </NotAuthorized>
                 </AuthorizeView>
