filtering keeps having errors

--- a/ModelProject/Components/Account/Pages/Login.razor
+++ b/ModelProject/Components/Account/Pages/Login.razor
@@ -19,7 +19,7 @@
         <EditForm OnValidSubmit="LoginUser" Model="Model" FormName="loginForm">
             <div class="row g-3">
                 <div class="col-md-6">
-                    <label for="email" class="form-label">Email</label>
+                    <label for="email" class="form-label">Username</label>
                     <InputText @bind-Value="Model.Email" class="form-control" placeholder="name@example.com" />
                 </div>
                 <div class="col-md-6">
