focus on model page

--- a/ModelProject/Components/Account/Pages/Login.razor
+++ b/ModelProject/Components/Account/Pages/Login.razor
@@ -20,7 +20,7 @@
             <div class="row g-3">
                 <div class="col-md-6">
                     <label for="email" class="form-label">Username</label>
-                    <InputText @bind-Value="Model.Email" class="form-control" placeholder="name@example.com" />
+                    <InputText @bind-Value="Model.Email" class="form-control" placeholder="Username" />
                 </div>
                 <div class="col-md-6">
                     <label for="password" class="form-label">Password</label>
