--- a/ModelProject/Components/Pages/ModelPage.razor
+++ b/ModelProject/Components/Pages/ModelPage.razor
@@ -5,6 +5,7 @@
 
 <PageTitle>Model Details</PageTitle>
 
+@*If models are missing it will display Loading*@
 @if (digitalModel == null)
 {
     <p>Loading model details...</p>
@@ -16,6 +17,7 @@ else
             <div class="col-md-6">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
+                        @*path to display image of the model*@
                         @foreach (var image in imageFiles)
                         {
                             <div class="carousel-item @(image == imageFiles.First() ? "active" : "")">
@@ -23,16 +25,10 @@ else
                             </div>
                         }
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    
                 </div>
             </div>
+            @*Displays all relevent data about a specific model which relates to what the user inputted*@
             <div class="col-md-6">
                 <h1>@digitalModel.Title</h1>
                 <p><strong>Category:</strong> @digitalModel.Category</p>
@@ -76,16 +72,20 @@ else
         }
     }
 
+    //downloads    
     private void DownloadModel()
     {
         if (digitalModel != null)
         {
+            //increases the download by one one clicked 
             digitalModel.Downloads++;
+            //updates the download within the database
             ModelProvider.UpdateModelAsync(digitalModel);
-            NavigationManager.NavigateTo($"/ModelFiles/{digitalModel.ModelFiles}", true);
+            
         }
     }
 
+    // navigation command to the home page
     private void NavigateToHome()
     {
         NavigationManager.NavigateTo("/");
